--- a/test-app-ingress.yaml
+++ b/test-app-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: test-app-ingress
+  namespace: default
   annotations:
     getambassador.io/config: |
       ---
