--- a/test-app.yaml
+++ b/test-app.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tesp-app
-  namespace: default
+  name: test-app
+  namespace: default  # Ensure the namespace is set for the Deployment
 spec:
   replicas: 1
   selector:
@@ -23,7 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: test-app
-  namespace: default
+  namespace: default  # Ensure the namespace is set for the Service
 spec:
   selector:
     app: test-app
@@ -31,4 +31,3 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-
